# extract-file-context

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  extractor.rs  main.rs  ui.rs
